# hup

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  ChangeLog.md  HACKING.md  LICENSE  Makefile  README.md  README.pmd  TODO.md  appveyor.yml  cabal.project.freeze.Linux-8.2.2  cabal.project.freeze.Linux-8.6.5  cabal.project.freeze.Windows-8.2.2  cabal.project.freeze.Windows-8.6.5  cabal.project.freeze.macOS-8.2.2  cabal.project.freeze.macOS-8.6.5  goss.yaml  hup-version.pl  hup.cabal  stack-lts-13.yaml  stack-lts-14.yaml  stack-lts-3.yaml  stack-lts-7.yaml  stack-static.yaml  stack.yaml  start-hackage-server.sh  stop-hackage-server.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: CmdArgs.hs  DefaultServerUrl.hs  DocBuilding.hs  Main.hs  SanityCheck.hs  Stack.hs  Types.hs  Upload.hs
lib/Distribution/: Hup.hs
lib/Distribution/Hup/: BuildTar.hs  Parse.hs  Types.hs  Upload.hs
src/: CmdArgs.hs  DefaultServerUrl.hs  DocBuilding.hs  Main.hs  SanityCheck.hs  Types.hs  Upload.hs
src-hspec-test/Distribution/Hup/: ParseSpec.hs  UploadSpec.hs  WebTest.hs
src-hspec-test/Distribution/Hup/Parse/: Test.hs
src-hspec-test/Distribution/Hup/Upload/: MockWebApp.hs  Test.hs
src/CmdArgs/: PatchHelp.hs
src/Distribution/: Hup.hs
src/Distribution/Hup/: BuildTar.hs  Parse.hs  Types.hs  Upload.hs
test/: DocTest.hs  Spec.hs
test-doctest/: DocTest.hs
test-hspec/: Spec.hs
test-hspec/Distribution/Hup/: ParseSpec.hs  UploadSpec.hs  WebTest.hs
test-hspec/Distribution/Hup/Parse/: Test.hs
test-hspec/Distribution/Hup/Upload/: MockWebApp.hs  Test.hs
test/Distribution/Hup/: ParseSpec.hs  UploadSpec.hs  WebTest.hs
test/Distribution/Hup/Parse/: Test.hs
test/Distribution/Hup/Upload/: Test.hs
