name:                hup
version:             0.1.0.0
synopsis:            Upload packages or documentation to a hackage server
description:         
  Upload packages or documentation to a hackage server
  .
  See README for details.
homepage:            https://github.com/phlummox/hup
license:             BSD2
license-file:        LICENSE
author:              phlummox
maintainer:          phlummox2@gmail.com
copyright:           phlummox 2016, others where indicated
category:            Distribution, Web, Documentation  
build-type:          Simple
tested-with:         GHC == 8.0.1 
cabal-version:       >=1.10
extra-source-files:  README.md, stack.yaml 

library
  hs-source-dirs:      lib
  exposed-modules:     
      Distribution.Hup
    , Distribution.Hup.BuildTar
    , Distribution.Hup.Parse
    , Distribution.Hup.Types
    , Distribution.Hup.Upload
  build-depends:       
      base >= 4.7 && < 5
    , bytestring
    , directory
    , filepath
    , http-client 
    , http-client-tls
    , http-types
    , mtl
    , split
    , tar
    , zlib
  default-language:    Haskell2010

Flag PatchHelpMessage
  Description:
    Use patched version of cmdargs-0.10.14.1 with more informative help
    message. Needs stack, so it can be pulled from github. (Or you need
    to fetch the patched version and add it to a cabal sandbox.)
  Default:     False
  Manual:      True


executable hup
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
      Types
    , CmdArgs
    , CmdArgs.PatchHelp
    , DefaultServerUrl
    , SanityCheck
    , Upload
  if flag(PatchHelpMessage)
    other-modules: CmdArgs.PatchHelp
    cpp-options:   -DPATCH_HELP
    build-depends: cmdargs == 0.10.14.1 
  else     
    build-depends: cmdargs  
  default-language:    Haskell2010
  build-depends:       
      base 
    , bytestring
    , directory >= 1.2.5.0
    , mtl
    , shelly >= 1.6.5
    -- shelly - higher possibly needed?
    , tagsoup
    , text
    , transformers
    , hup

source-repository head
  type:     git
  location: https://github.com/phlummox/hup


